<resources>

    <string name="app_name">Gesture Recognizer for Pebble™</string>
    <string name="action_settings">Settings</string>

    <!--<string name="pebble_not_connected">Pebble™ not connected: use Bluetooth toggle to retry connection. \nIf this is a first-time installation, use the Connect Pebble™ button.</string>-->
    <string name="pebble_not_connected">If Pebble™ is not connected: use Bluetooth toggle to retry connection. \nIf this is a first-time installation, use the Connect Pebble™ button.</string>
    <string name="pebble_not_connected_toast">Pebble™ disconnected</string>
    <string name="pebble_connected">Pebble™ CONNECTED. (Use Bluetooth toggle when connection lost.)</string>
    <string name="pebble_connected_toast">Pebble™ connected</string>


    <string name="generic_not_connected">Action Device(s) not connected.</string>
    <string name="generic_connected">Action Device(s) CONNECTED.</string>
    <string name="generic_toggle">Action Device(s) toggle</string>
    <string name="label_mqtt_service_toggle">A toggle</string>

    <string name="title_masterdetailitem_list">MasterDetailItems</string>
    <string name="title_masterdetailitem_detail">MasterDetailItem Detail</string>

    <string name="action_label_refresh">Refresh</string>
    <string name="action_label_button_1">Action Button 1</string>
    <string name="action_label_button_2">Gesture Library</string>
    <string name="action_label_setting_1">Setting 1</string>
    <string name="action_label_set_1_opt_1">Set 1 Opt 1</string>
    <string name="action_label_set_1_opt_2">Set 1 Opt 2</string>
    <string name="action_label_set_1_opt_3">Set 1 Opt 3</string>
    <string name="action_label_setting_2">Setting 2</string>
    <string name="action_label_set_2_opt_1">Set 2 Opt 1</string>
    <string name="action_label_set_2_opt_2">Set 2 Opt 2</string>


    <string name="title_activity_cursor_list">CursorListActivity</string>
    <string name="output_window">Output Window\n</string>
    <string name="label_toggle_1">Toggle 1</string>
    <string name="toggle_1">Toggle 1</string>

    <string name="start_communication_test">START COMMUNICATION TEST</string>
    <string name="stop_communication_test">STOP COMMUNICATION TEST</string>
    <string name="pebble_button_up_pressed">Pebble™ button UP pressed.</string>
    <string name="pebble_button_down_pressed">Pebble™ button DOWN pressed.</string>
    <string name="pebble_button_select_pressed">Pebble™ button SELECT pressed.</string>

    <string name="connect_pebble">Connect Pebble™</string>
    <string name="pebble_companion_app_not_found">Pebbe Companion App not found. Redirecting to App Store.</string>

    <string name="pebble_companion_app_found">Official Pebble™ Companion App found. Now opening.</string>
    <string name="connect_your_pebble">Connect your Pebble™ through the official Pebble™ Companion App.</string>
    <string name="download_and_retry">Download the official Pebble™ Companion App and retry.</string>

    <string name="icon_content_description">Mobile Device</string>
    <string name="connect_generic">Connect Action Device(s)</string>

    <string name="BT">Bluetooth</string>
    <string name="toggle_BT">Bluetooth toggle</string>
    <string name="BT_already_enabled">Bluetooth is enabled already</string>
    <string name="BT_already_disabled">Bluetooth is disabled already</string>
    <string name="BT_adapter_not_found">Bluetooth adapter not found</string>


    <string name="title_activity_pebble_accel_stream">Pebble™ Acceleration Data Stream</string>
    <string name="no_data">NO DATA</string>

    <string name="start">START</string>

    <string name="label_tab_2">Connect</string>
    <string name="label_tab_3">Train</string>
    <string name="label_tab_4">Recognize</string>


    <!-- voor PEBBLE DATA STREAM -->
    <string name="x_axis_title">x-axis</string>
    <string name="y_axis_title">y-axis</string>
    <string name="z_axis_title">z-axis</string>


    <string name="title_activity_pebble_gesture_overview">Pebble™ Gesture Overview</string>
    <string name="title_advanced_recognizer">Gesture Recognizer for Pebble™</string>


    <string name="hello">""</string>
    <string name="hold_to_record">Hold to record gesture</string>


    <string name="recognized_gestures">Recognized Gestures: \n</string>

    <string name="WiFi">Wi-Fi</string>

    <string name="label_insert_ip_address">Insert IP address</string>

    <string name="no_gestures_trained">No additional gestures trained.</string>

    <string name="error_gesture_library">Error loading the gesture library. Clear the Application Data and retrain your gestures.</string>
    <string name="clear_gestures">Clear all trained gestures</string>
    <string name="title_activity_device_list">DeviceListActivity</string>

    <string name="hello_world">Hello world!</string>


    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for Bluetooth devices...</string>
    <string name="select_device">Select a Bluetooth device to connect</string>
    <string name="none_paired">No Bluetooth devices have been paired</string>
    <string name="none_found">No Bluetooth devices found</string>
    <string name="title_paired_devices">Paired Bluetooth Devices</string>
    <string name="title_other_devices">Other Available Bluetooth Devices</string>
    <string name="button_scan">Scan for Bluetooth devices</string>
    <string name="choose_gesture_to_train">Choose gesture to train</string>
    <string name="description_choose_gesture">Choose the gesture to train from the following list of gestures supported by the connected Action Devices.</string>
    <string name="no_connected_AD_supports">No currently connected Action Device supports this gesture\n</string>

    <string name="tutorial_train">1) Choose gesture to train. \n2) Record the gesture by holding (not tapping) the record button. \n
        3) Make sure to have 8 or more trainings records for each gesture. The more, the better. \nEach training count can be found in the Gesture Library. \n4) Train another gesture by starting from 1).</string>
    <string name="tutorial_recognize"><![CDATA[The face detectors on the connected Action Devices
    allow for automatic enabling & disabling of the Pebble™ accelerometer data stream. Manual toggle available on the right. \n\n If Vibration Feedback is enabled below: \n1x
    Vibration = A gesture was recognized and this gesture is supported by at least 1 currently connected Action Device. \n2x Vibration = No currently connected Action Device supports this gesture OR No network connection.]]></string>
    <string name="official_app">Official Pebble™ Companion App</string>


</resources>
