<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yen.androidappthesisyen.advancedrecognizer.AdvancedFragment">


    <TextView
        android:id="@+id/x_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/toggle_accel_stream"
        android:layout_toEndOf="@+id/toggle_accel_stream"
        android:layout_toRightOf="@+id/toggle_accel_stream"
        android:text="@string/no_data" />

    <TextView
        android:id="@+id/y_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/x_view"
        android:layout_alignStart="@+id/x_view"
        android:layout_below="@+id/x_view"
        android:text="@string/no_data" />

    <TextView
        android:id="@+id/z_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/y_view"
        android:layout_alignStart="@+id/y_view"
        android:layout_below="@+id/y_view"
        android:text="@string/no_data" />

    <TextView
        android:id="@+id/rate_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/z_view"
        android:layout_alignStart="@+id/z_view"
        android:layout_below="@+id/z_view"
        android:text="@string/no_data" />

    <ToggleButton
        android:id="@+id/toggle_accel_stream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />
    <!-- TODO werkt deze tekst nog bij TOGGLE button? of mag nu weg? -->


    <!-- voor THREE DOLLAR gesture detection -->
    <LinearLayout
        android:id="@+id/relative_layout_three_dollar_gesture_detection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rate_view"
        android:focusable="true"
        android:orientation="vertical"
        android:weightSum="1">

<!--TODO mag zkr weg? -->
        <!--<LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="No gesture selected."
            android:id="@+id/lbl_recorded_gesture"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.04" />

        <Button
            android:id="@+id/btn_record_gesture"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100px"
            android:layout_weight="0.04"
            android:width="200px"
            android:height="150px"
            android:text="@string/hold_to_record"
            android:textSize="30px" />

        <Button
            android:id="@+id/btn_choose_gesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_gesture_to_train" />


    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxGestureSpotting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/relative_layout_three_dollar_gesture_detection"
        android:layout_alignRight="@+id/relative_layout_three_dollar_gesture_detection"
        android:layout_alignTop="@+id/tutorial"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:text="Use gesture spotting." />

    <ScrollView
        android:id="@+id/scrollView_gestures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relative_layout_three_dollar_gesture_detection"
        android:layout_alignEnd="@+id/checkBoxGestureSpotting"
        android:layout_alignLeft="@+id/checkBoxGestureSpotting"
        android:layout_alignRight="@+id/checkBoxGestureSpotting"
        android:layout_alignStart="@+id/checkBoxGestureSpotting"
        android:layout_below="@+id/rate_view"
        android:background="@drawable/border_ui"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView_gestures"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recognized_gestures" />
    </ScrollView>

    <TextView
        android:id="@+id/tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/toggle_accel_stream"
        android:layout_toLeftOf="@+id/toggle_accel_stream"
        android:layout_toStartOf="@+id/toggle_accel_stream"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- android:checked="true" -->

</RelativeLayout>
